--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all contributors to the repository.
 
 
-Angel J. Carrion <5675@holbertonstudents.com>
-Lizbeth Garcia
+Angel J. Carrion < 5675@holbertonstudents.com >
+Lizbeth Garcia < 5668@holbertonstudents.com >
